--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,8 +14,8 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm test
-
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get code
